[gd_scene load_steps=11 format=3 uid="uid://own8xi1mum0b"]

[ext_resource type="Script" uid="uid://c5pe8rwxdmawq" path="res://src/scenes/game/game.gd" id="1_i43ty"]
[ext_resource type="PackedScene" uid="uid://bg4sfkf77xq2u" path="res://src/scenes/bunker/bunker.tscn" id="1_uitmv"]
[ext_resource type="AudioStream" uid="uid://luekux2bwhey" path="res://assets/audio/sfx/gameover4.ogg" id="2_3fbob"]
[ext_resource type="PackedScene" uid="uid://ciblq0yi0tux7" path="res://src/scenes/player/player.tscn" id="2_5fwnx"]
[ext_resource type="AudioStream" uid="uid://dikuydw7wmktu" path="res://assets/audio/sfx/upgrade4.ogg" id="2_14lda"]
[ext_resource type="PackedScene" uid="uid://dukjruu13k03e" path="res://src/scenes/ui/pause_screen.tscn" id="2_uitmv"]
[ext_resource type="PackedScene" uid="uid://2w788sq5d482" path="res://src/scenes/ui/ui.tscn" id="2_viayp"]
[ext_resource type="PackedScene" uid="uid://cwuxnxewxup6" path="res://src/scenes/invaders/invaders.tscn" id="3_75q6j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uitmv"]
size = Vector2(8, 184)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5fwnx"]
size = Vector2(320, 8)

[node name="Game" type="Node"]
script = ExtResource("1_i43ty")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_14lda")

[node name="GameOverStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_3fbob")

[node name="SpaceshipTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 30.0
one_shot = true
autostart = true

[node name="CanvasLayer" parent="." instance=ExtResource("2_viayp")]

[node name="PauseScreen" parent="." instance=ExtResource("2_uitmv")]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.046875, 0.046875, 0.046875, 1)

[node name="Player" parent="." instance=ExtResource("2_5fwnx")]
unique_name_in_owner = true
position = Vector2(30, 174)

[node name="InvadersParent" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Invaders" parent="InvadersParent" instance=ExtResource("3_75q6j")]

[node name="Bunkers" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(22, 153)

[node name="Bunker" parent="Bunkers" instance=ExtResource("1_uitmv")]
position = Vector2(2, 5)
scale = Vector2(0.5, 0.5)

[node name="Bunker2" parent="Bunkers" instance=ExtResource("1_uitmv")]
position = Vector2(66, 5)
scale = Vector2(0.5, 0.5)

[node name="Bunker3" parent="Bunkers" instance=ExtResource("1_uitmv")]
position = Vector2(130, 5)
scale = Vector2(0.5, 0.5)

[node name="Bunker4" parent="Bunkers" instance=ExtResource("1_uitmv")]
position = Vector2(194, 5)
scale = Vector2(0.5, 0.5)

[node name="Bunker5" parent="Bunkers" instance=ExtResource("1_uitmv")]
position = Vector2(258, 5)
scale = Vector2(0.5, 0.5)

[node name="Lasers" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Walls" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="LeftWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(-4, 92)
shape = SubResource("RectangleShape2D_uitmv")

[node name="RightWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(324, 92)
shape = SubResource("RectangleShape2D_uitmv")

[node name="LaserDeathArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 24

[node name="TopWall" type="CollisionShape2D" parent="LaserDeathArea2D"]
position = Vector2(160, -4)
shape = SubResource("RectangleShape2D_5fwnx")

[node name="BottomWall" type="CollisionShape2D" parent="LaserDeathArea2D"]
position = Vector2(160, 184)
shape = SubResource("RectangleShape2D_5fwnx")

[node name="SpaceshipParent" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(28, 32)

[connection signal="timeout" from="SpaceshipTimer" to="." method="_on_spaceship_timer_timeout"]
[connection signal="body_entered" from="LaserDeathArea2D" to="." method="_on_laser_death_area_2d_body_entered"]
